packages/block-editor/src/components/block-list/style.scss
.block-editor-block-list__layout .components-draggable__clone {
	// Hide the Block UI when dragging the block.
	// This ensures the page scroll properly (no sticky elements).
	.block-editor-block-contextual-toolbar {
		// It's probably okay to use !important here to avoid over-complicating the selector.
		display: none !important;
	}
}

.block-editor-block-list__layout .block-editor-block-list__block.is-selected { // Needs specificity to override inherited styles.
	// While block is being dragged, dim the slot dragged from, and hide some UI.
	&.is-dragging {
		&::before {
			border: none;
		}

		> * {
			background: $light-gray-100;
		}

		> * > * {
			visibility: hidden;
		}

		.block-editor-block-mover,
		.block-editor-block-contextual-toolbar {
			display: none;
		}
	}

	.reusable-block-edit-panel * {
		z-index: z-index(".block-editor-block-list__block .reusable-block-edit-panel *");
	}
}


/**
 * General Post Content Layout
 */

// Add side padding for the main block container, currently post_content.
// The purpose of this padding is to ensure that on small viewports, there is
// room for the block border that sits 14px ($block-padding) offset from the
// block footprint, as well as the side-UI.
.block-editor-block-list__layout {
	padding-left: $block-padding;
	padding-right: $block-padding;

	// Beyond the mobile breakpoint, compensate for side UI.
	@include break-small() {
		padding-left: $block-padding + $block-side-ui-width + $block-padding + $border-width * 2;
		padding-right: $block-padding + $block-side-ui-width + $block-padding + $border-width * 2;
	}

	// Don't propogate that padding to nested blocks.
	.block-editor-block-list__layout {
		padding-left: 0;
		padding-right: 0;
	}
}


/**
 * Notices & Block Selected/Hover Styles.
 */

.block-editor-block-list__layout .block-editor-block-list__block {
	position: relative;

	// Break long strings of text without spaces so they don't overflow the block.
	overflow-wrap: break-word;

	/**
	 * Notices
	 */

	.components-placeholder .components-with-notices-ui {
		margin: -10px 20px 12px 20px;
		width: calc(100% - 40px);
	}

	.components-with-notices-ui {
		margin: 0 0 12px 0;
		width: 100%;

		.components-notice {
			margin-left: 0;
			margin-right: 0;

			.components-notice__content {
				font-size: $default-font-size;
			}
		}
	}

	/**
	 * Block border layout
	 */

	&.has-mover-inside > [data-block] {
		display: flex;
	}

	&::before {
		z-index: z-index(".block-editor-block-list__block::before");
		content: "";
		position: absolute;
		border: $border-width solid transparent;
		border-left: none;
		box-shadow: none;
		pointer-events: none;
		transition: border-color 0.1s linear, border-style 0.1s linear, box-shadow 0.1s linear;
		@include reduce-motion("transition");

		// Include a transparent outline for Windows High Contrast mode.
		outline: $border-width solid transparent;

		// Go edge-to-edge on mobile.
		right: -$block-padding;
		left: -$block-padding;
		top: -$block-padding;
		bottom: -$block-padding;
	}

	// Selected style.
	&.is-selected {
		&::before {
			// Use opacity to work in various editor styles.
			border-color: $dark-opacity-light-800;
			box-shadow: inset $block-left-border-width 0 0 0 $dark-gray-500;

			.is-dark-theme & {
				border-color: $light-opacity-light-800;
				box-shadow: inset $block-left-border-width 0 0 0 $light-gray-600;
			}

			// Switch to outset borders on larger screens.
			@include break-small() {
				box-shadow: -$block-left-border-width 0 0 0 $dark-gray-500;

				.is-dark-theme & {
					box-shadow: -$block-left-border-width 0 0 0 $light-gray-600;
				}
			}
		}

		&.is-navigate-mode::before {
			border-color: $blue-medium-focus;
			box-shadow: inset $block-left-border-width 0 0 0 $blue-medium-focus;

			@include break-small() {
				box-shadow: -$block-left-border-width 0 0 0 $blue-medium-focus;
			}
		}
	}

	// Spotlight mode.
	&.is-focus-mode:not(.is-multi-selected) {
		opacity: 0.5;
		transition: opacity 0.1s linear;
		@include reduce-motion("transition");

		&:not(.is-focused) .block-editor-block-list__block,
		&.is-focused {
			opacity: 1;
		}
	}
}


/**
 * Cross-Block Selection
 */

.block-editor-block-list__layout {

	// The primary indicator of selection is the native selection marker.
	// To indicate multiple blocks, we provide an additional selection indicator.
	.block-editor-block-list__block.is-multi-selected {

		&::before {
			border-left-color: $dark-opacity-light-800;
			box-shadow: inset $block-left-border-width 0 0 0 $dark-gray-500;

			.is-dark-theme & {
				border-left-color: $light-opacity-light-800;
				box-shadow: inset $block-left-border-width 0 0 0 $light-gray-600;
			}

			// Switch to outset borders on larger screens.
			@include break-small() {
				box-shadow: -$block-left-border-width 0 0 0 $dark-gray-500;

				.is-dark-theme & {
					box-shadow: -$block-left-border-width 0 0 0 $light-gray-600;
				}
			}
		}
	}

	// The additional marker, we limit only to top level blocks.
	.block-editor-block-list__block.is-multi-selected .block-editor-block-list__block.is-multi-selected::before {
		box-shadow: none;
	}

	// Provide exceptions for placeholders.
	.components-placeholder {
		::selection {
			background: transparent;
		}
	}
}
/* ... */

